# elearning-platform-project

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
